--- a/Econometrics/R code for econemetrics/Lecture_4.qmd
+++ b/Econometrics/R code for econemetrics/Lecture_4.qmd
@@ -23,6 +23,7 @@ y <- sin(x)*rnorm(1000,1,1)
 
 mean(x*y); mean(x)*mean(y); cor(x,y)
 ```
+
 Recalling the definition of COV(X,Y), if Y and X are independent, we obtain:
 
 $$ Cov(Y,X) = 0$$
@@ -36,7 +37,6 @@ Suppose that the joint density of Y and X isgiven by:
 $$ f(x,y) = 1/2, 0 < x < 1, 0 < y < 1$$
 
 Then, we have:
-
 
 ```{r}
 x <- runif(1000,0,1)
@@ -56,13 +56,13 @@ cov(x,y)
 
 x and y are clearly dependent but...
 
-
 ```{r}
 
 cor(x,y)
 
 
 ```
+
 The above result is due to the fact $E[X^3] = 0$ when X is a standard normal random variable.
 
 If Y and X are independent, the conditional expectation of Y given X coincides with Y's unconditional expectation.
@@ -70,11 +70,10 @@ If Y and X are independent, the conditional expectation of Y given X coincides w
 Note that if Y and X are independent:
 
 $$fY|X(y|X = x) = \frac{fYX(y,x)}{fx(x)} = \frac{fY(y)fX(x)}{fX(x)} = fY(y)$$
- 
-Lecture 3: 
+
+Lecture 3:
 
 Population and sample
-
 
 Statistical inference
 
@@ -86,18 +85,13 @@ Sampling: obtain a finite sample from the population of intereset.
 
 Statistical inference: from the results on the sample, we can infer the population.
 
-
-
-
 There are two types of population concept:
 
-- Finite population: the population is finite and the size is known. (e.g. countries, number of students in a class)
+-   Finite population: the population is finite and the size is known. (e.g. countries, number of students in a class)
 
-- super-population = all the observations following a population distribution. (treat the underllying data dist as the target populations itself)
+-   super-population = all the observations following a population distribution. (treat the underllying data dist as the target populations itself)
 
 The observed finite-population can be regarded as a "sample" from a super-population.
-
-
 
 Throughout the lectures, we adopt the super-population concept framework (because of its analytical convenience).
 
@@ -105,19 +99,17 @@ Throughout the lectures, we adopt the super-population concept framework (becaus
 
 LLN: Informal statement.
 
-Suppose that we have data {X1, X2, ..., Xn} of sample size n randomly drawn from the same population. Let population mean of $ X: \mu = E[X]$ and Sample average of X: $\bar{X} = \frac{1}{n} \sum_{i=1}^{n} X_i$
+Suppose that we have data {X1, X2, ..., Xn} of sample size n randomly drawn from the same population. Let population mean of \$X: \mu = E\[X\]\$ and Sample average of X: $\bar{X} = \frac{1}{n} \sum_{i=1}^{n} X_i$
 
 Then, the law of large numbers states that as the sample size n increases, the sample average $\bar{X}$ converges to the population mean $\mu$ in probability.
 
 When one considers a finite-population framework, n is fixed and cannot trend to infinity.
-
 
 If n is sufficiently large, the sample average $\bar{X}$ is a good estimate of the population mean $\mu$.
 
 A simulation of dice rolling with R
 
 For example, if you want to simulate 10 dice rolls, you can use the following code:
-
 
 ```{r}
 library(extraDistr)
@@ -126,13 +118,12 @@ Dice10 <- rdunif(10,1,6)
 Dice10
 
 ```
+
 ```{r}
 mean(Dice10)
 ```
 
-
 The numbers are randomly generated so we need to set a seed to get results that can be replicated. The function for that is set.seed.
-
 
 Now we create dice20000.
 
@@ -142,6 +133,7 @@ Dice20000 <- rdunif(20000,1,6)
 
 mean(Dice20000)
 ```
+
 The sample average of Dice20000 is roughly equal to 3.5
 
 Recall that the expected average is 3.5
@@ -157,7 +149,6 @@ Dice <- function(n){
 Dice(10)
 ```
 
-
 ```{r}
 Dice(100)
 ```
@@ -165,18 +156,18 @@ Dice(100)
 ```{r}
 Dice(1000)
 ```
+
 Next, using the avoe created function Dice(), we repeat the dice rolling experiment for different n values.
 
 Such calculation can be performed using the for-loop command:
 
-for(i in sequence)  statement
+for(i in sequence) statement
 
 Here, "sequence" is a vector, where i takes on each of its value during the loop.
 
 In each iteration, the statement is executed.
 
 The iteration stops when i reaches the final element of "sequence".
-
 
 ```{r}
 N <- 1000
@@ -198,7 +189,6 @@ ggplot(data, aes(x = n, y = R))+
   xlab("Number of dice rolls")
 ```
 
-
 ```{r}
 sim <- function(n) {
   X <- runif(1, -1, 1)
@@ -218,7 +208,6 @@ for (i in 2:N) {
 
 ```
 
-
 ```{r}
 data <- data.frame(n = 2:N, R = R)
 ggplot(data, aes(x = n, y = R))+
@@ -232,11 +221,11 @@ Larger n values lead to a smaller variance of the sample average.
 
 In what sense does the sample average converge to the population mean mathematically?
 
-=> Convergence in probability
+=\> Convergence in probability
 
 Under what conditions does LLN hold true?
 
-=> An important condition is that the sample is drawn from the same population.
+=\> An important condition is that the sample is drawn from the same population.
 
 Convergence in probability
 
@@ -274,8 +263,6 @@ A sequence of random variables $(v_n)_{n=1}^{\infty}$ converges to a constant $a
 
 Interpretation: $v_n$ converges to $a$ in probability if the probability that $v_n$ is close to $a$ becomes close to 1 as n approaches infinity.
 
-
-
 The most important point is this definition that $_epsilon$ can be chosen arbitrarily small. Say $\epsilon = 0.01$ or $\epsilon = 0.0001$ or even smaller.
 
 However small $\epsilon$ is, we can observe ${|v_n - a| < \epsilon}$ with a high probability if n is sufficiently large.
@@ -291,4 +278,3 @@ Then, the sample average $\bar{X}$ converges to the population mean $\mu$ in pro
 $$\bar{X} \xrightarrow{p} \mu  (n \rightarrow \infty)$$
 
 This result is known as the Law of Large Numbers (LLN).
-
